# AtmoSense

./: .gitignore  CMakeLists.txt  README.md
resources/: resources.qrc
resources/styles/: default.qss
resources/translations/: atmo_sense_en.ts  atmo_sense_uk.ts
src/: CMakeLists.txt
src/application/: AlertService.cpp  AlertService.h  Application.cpp  Application.h  IconMapper.cpp  IconMapper.h  TrayService.cpp  TrayService.h  UpdateScheduler.cpp  UpdateScheduler.h  main.cpp
src/core/: ApplicationContext.cpp  ApplicationContext.h
src/data/: CMakeLists.txt
src/data/cache/: FileCacheStore.cpp  FileCacheStore.h
src/data/open_meteo/: OpenMeteoGeocoder.cpp  OpenMeteoGeocoder.h  OpenMeteoWeatherProvider.cpp  OpenMeteoWeatherProvider.h
src/data/open_weather_map/: OpenWeatherMapWeatherProvider.cpp  OpenWeatherMapWeatherProvider.h
src/data/repository/: WeatherRepository.cpp  WeatherRepository.h
src/domain/: CMakeLists.txt
src/domain/interfaces/: ICacheStore.h  IGeocoder.h  IWeatherProvider.h
src/domain/model/: AirQuality.h  DataStatus.h  Forecast.h  Language.h  Locale.h  Location.h  Notification.h  Provider.h  Theme.h  UnitSystem.h  Weather.h
src/domain/repository/: IWeatherRepository.h  WeatherRepository.h
src/domain/use_case/: DetectLocationUseCase.h  GetWeatherUseCase.h
src/infrastructure/: CMakeLists.txt  Logger.cpp  Logger.h  NetworkClient.cpp  NetworkClient.h  PlatformUtils.cpp  PlatformUtils.h  SettingsManager.cpp  SettingsManager.h  ThemeManager.cpp  ThemeManager.h  TranslationManager.cpp  TranslationManager.h  UnitFormatter.cpp  UnitFormatter.h
src/infrastructure/factory/: GeocoderFactory.cpp  GeocoderFactory.h  WeatherProviderFactory.cpp  WeatherProviderFactory.h
src/infrastructure/notifications/: NotificationSoundPlayer.cpp  NotificationSoundPlayer.h
src/ui/: CMakeLists.txt  DailyForecastWidget.cpp  DailyForecastWidget.h  DailyForecastWidget.ui  HourlyForecastWidget.cpp  HourlyForecastWidget.h  HourlyForecastWidget.ui  LocationSearchDialog.cpp  LocationSearchDialog.h  LocationSearchDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  WeatherSummaryWidget.cpp  WeatherSummaryWidget.h  WeatherSummaryWidget.ui
